--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js and pnpm
-        uses: ./.github/actions/setup-node-pnpm/action.yml
+        uses: ./.github/actions/setup-node-pnpm
         with:
           node-version: "20"
           pnpm-version: "8"
